
[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "test.py",
    "tests",
    "venv",
    "env",
    ".venv",
    ".env",
    "src/backend/plugins/*",
]
src = ["src/backend/InvenTree"]
# line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.lint]
select = ["A", "B", "C", "C4", "D", "F", "I", "N", "SIM", "PIE", "PLE", "PLW", "RUF", "UP", "W",
#"DOC201", "DOC202", # enforce return docs
"DOC402","DOC403", # enforce yield docs
#"DOC501","DOC502", # enforce raise
]
# Things that should be enabled in the future:
# - LOG
# - DJ # for Django stuff
# - S # for security stuff (bandit)
# - D401 - Imperative docstrings

ignore = [
    "PLE1205",
    # - PLE1205 - Too many arguments for logging format string
    "PLW2901",
    # - PLW2901 - Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PLW0602","PLW0603","PLW0604",  # global variable things
    "RUF015",
    # - RUF015 - Prefer next({iterable}) over single element slice
    "RUF012",
    # - RUF012 - Mutable class attributes should be annotated with typing.ClassVar
    "RUF052",
    # - RUF052 - Local dummy variable is accessed
    "SIM117",
    # - SIM117 - Use a single with statement with multiple contexts instead of nested with statements
    "SIM102",
    # - SIM102 - Use a single if statement instead of nested if statements
    "SIM105",
    # - SIM105 - Use contextlib.suppress({exception}) instead of try-except-pass
    "C901",
    # - C901 - function is too complex
    "N999",
    # - N802 - function name should be lowercase
	"N802",
	# - N806 - variable should be lowercase
	"N806",
	# - N812 - lowercase imported as non-lowercase
	"N812",
    # - RUF032 - decimal-from-float-literal
    "RUF032",
    # - RUF045 - implicit-class-var-in-dataclass
    "RUF045",
    # - UP045 - Use `X | None` instead of `Optional[X]`
    "UP045",

    # TODO These should be followed up and fixed
    # - B904 Within an `except` clause, raise exceptions
    "B904",

    # Remove fast
    "A002", "B018"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = false
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.uv.pip]
python-version = "3.11.0"
no-strip-extras=true
generate-hashes=true

[tool.ty.environment]
root = ["src/backend/InvenTree"]

[tool.ty.rules]
unresolved-reference="ignore"  # 21 # see https://github.com/astral-sh/ty/issues/220
unresolved-attribute="ignore"  # 505 # need Plugin Mixin typing
call-non-callable="ignore"  # 8 ##
invalid-return-type="ignore"  # 22 ##
invalid-argument-type="ignore"  # 49
possibly-unbound-attribute="ignore"  # 25 # https://github.com/astral-sh/ty/issues/164
unknown-argument="ignore"  # 3  # need to wait for betterdjango field stubs
invalid-assignment="ignore"  # 17  # need to wait for betterdjango field stubs
no-matching-overload="ignore"  # 3  # need to wait for betterdjango field stubs

[tool.coverage.run]
source = ["src/backend/InvenTree", "InvenTree"]
dynamic_context = "test_function"

[tool.coverage.html]
show_contexts = true

[tool.djlint]
ignore = "D018,H006,H008,H020,H021,H023,H025,H030,H031,T002"

[tool.isort]
src_paths=["src/backend/InvenTree", ]
skip_glob ="*/migrations/*.py"
known_django="django"
sections=["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.codespell]
ignore-words-list = ["assertIn","SME","intoto","fitH"]

[tool.pytest]
django_find_project = false
pythonpath = ["src/backend/InvenTree"]
DJANGO_SETTINGS_MODULE = "InvenTree.settings"
python_files = ["test*.py",]

[project]
name = "inventree-server"
version = "0.0.0"
dependencies = [
    "django<6.0",                               # Django package
    "blessed",                                  # CLI for Q Monitor
    "cryptography>=44.0.0",                     # Core cryptographic functionality
    "django-anymail[amazon_ses,postal]",        # Email backend for various providers
    "django-allauth[mfa,socialaccount,saml,openid,headless]",   # SSO for external providers via OpenID
    "django-cleanup",                           # Automated deletion of old / unused uploaded files
    "django-cors-headers",                      # CORS headers extension for DRF
    "django-dbbackup>=5.0.0",                   # Backup / restore of database and media files
    "django-error-report-2",                    # Error report viewer for the admin interface
    "django-filter",                            # Extended filtering options
    "django-flags",                             # Feature flags
    "django-ical",                              # iCal export for calendar views
    "django-maintenance-mode",                  # Shut down application while reloading etc.
    "django-mailbox",                           # Email scraping
    "django-markdownify",                       # Markdown rendering
    "django-mptt",                              # Modified Preorder Tree Traversal
    "django-markdownify",                       # Markdown rendering
    "django-money",                             # Django app for currency management
    "django-mptt",                              # Modified Preorder Tree Traversal
    "django-redis>=5.0.0",                      # Redis integration
    "django-q2",                                # Background task scheduling
    "django-q-sentry",                          # sentry.io integration for django-q
    "django-sesame",                            # Magic link authentication
    "django-sql-utils",                         # Advanced query annotation / aggregation
    "django-sslserver",                         # Secure HTTP development server
    "django-structlog",                         # Structured logging
    "django-stdimage",                          # Advanced ImageField management
    "django-storages[s3,sftp]",                 # Storage backends for Django
    "django-taggit",                            # Tagging support
    "django-otp==1.3.0",                        # Two-factor authentication (legacy to ensure migrations) https://github.com/inventree/InvenTree/pull/6293
    "django-oauth-toolkit",                     # OAuth2 provider
    "djangorestframework",                      # DRF framework
    "djangorestframework-simplejwt[crypto]",    # JWT authentication
    "django-xforwardedfor-middleware",          # IP forwarding metadata
    "dulwich",                                  # pure Python git integration
    "docutils",                                 # Documentation utilities for auto admin docs
    "drf-spectacular",                          # DRF API documentation
    "feedparser",                               # RSS newsfeed parser
    "gunicorn",                                 # Gunicorn web server
    "jinja2",                                   # Jinja2 templating engine
    "pdf2image",                                # PDF to image conversion
    "pillow",                                   # Image manipulation
    "pint",                                     # Unit conversion
    "pip-licenses",                             # License information for installed packages
    "ppf.datamatrix",                           # Data Matrix barcode generator
    "pypdf",                                    # PDF manipulation tools
    "python-barcode[images]",                   # Barcode generator
    "python-dotenv",                            # Environment variable management
    "pyyaml>=6.0.1",                            # YAML parsing
    "qrcode[pil]",                              # QR code generator
    "rapidfuzz",                                # Fuzzy string matching
    "sentry-sdk",                               # Error reporting (optional)
    "setuptools",                               # Standard dependency
    "tablib[xls,xlsx,yaml]",                    # Support for XLS and XLSX formats
    "weasyprint",                               # PDF generation
    "whitenoise",                               # Enhanced static file serving
    # OpenTelemetry dependencies
    "grpcio",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-sqlite3",
    "opentelemetry-instrumentation-system_metrics",
    "opentelemetry-instrumentation-wsgi",
    "opentelemetry-instrumentation-psycopg",
    "opentelemetry-instrumentation-pymysql",
    # Pins
    "xmlsec==1.3.17",
]

[dependency-groups]
dev = [
    "coverage[toml]",                   # Unit test coverage
    "django-querycount",                # Display number of URL queries for requests
    "django-silk",                      # API query profiling
    "django-slowtests",                 # Show which unit tests are running slowly
    "django-test-migrations",           # Unit testing for database migrations
    "isort",                            # python import sorting
    "pip-tools",                        # Compile pip requirements
    "pre-commit",                       # Git pre-commit
    "setuptools",                       # Standard dependency
    "pdfminer.six",                     # PDF validation
    "ty",                               # type checking
    "django-types",                     # typing
    "django-stubs",                     # typing
    "requests-mock",                    # Mock requests for unit tests
    "pytest-codspeed",                  # Performance testing with Codspeed
    "pytest-django",                    # Pytest support for Django (for benchnmarking)
]
container = [
    # Basic package requirements
    "invoke>=2.2.0",
    "pyyaml>=6.0.1",
    "setuptools>=69.0.0",
    "wheel>=0.41.0",
    # Database links
    "psycopg[binary,pool]",
    "mysqlclient>=2.2.0",
    "mariadb>=1.1.8",
    # gunicorn web server
    "gunicorn>=22.0.0",
    # LDAP required packages
    "django-auth-ldap",  # Django integration for ldap auth
    "python-ldap",  # LDAP auth support
    "django<6.0",   # Force lower versions

    "uv",  # Upgraded python package installer
]
ci = [
    "jc>=1.25.6",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.1,<2.0",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-macros-plugin>=0.7,<2.0",
    "mkdocs-material>=9.0,<10.0",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-simple-hooks>=0.1,<1.0",
    "mkdocstrings[python]>=0.25.0,<=1.0.0",
    "neoteroi-mkdocs>=1.2.0",
]
